[metadata]
name = lbh15
version = 1.1.1
author = Daniele Panico, Daniele Tomatis
author_email = daniele.panico@newcleo.com, daniele.tomatis@newcleo.com
license = lgpl v3
description = Python implementation of liquid metal properties from Handbook on Lead-bismuth Eutectic Alloy and Lead Properties, Materials Compatibility, Thermal-hydraulics and Technologies
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
install_requires = scipy>=1.8.1; numpy>=1.22.3
include_package_data = True
python_requires = >=3.8.10
